<resources>
    <string name="app_name">JateList</string>
    <string name="username">usuario</string>
    <string name="password">contraseña</string>
    <string name="editButton">Editar</string>
    <string name="saveButton">Guardar</string>
    <string name="backButton">Atras</string>
    <string name="map">Mapa</string>
    <string name="izena">Nombre</string>
    <string name="comments">Comentarios</string>
    <string name="ubicacion">Ubicacion</string>
    <string name="valoracion">Valoracion</string>
    <string name="mode">Noche</string>
    <string name="salir">Salir</string>
    <string name="toast">Nuevo restaurante añadido</string>
    <string name="login_mssg">Usuario o contraseña incorrectos</string>
    <string name="remove_mssg">¿Estas seguro que deseas eliminar este restaurante?</string>
    <string name="si">Si</string>
    <string name="No">No</string>
    <string name="crear">Crear</string>
    <string name="cancel">Cancelar</string>
    <string name="usercreate_mssg">Usuario creado correctamente :)</string>
    <string name="toastOut">Desconectado</string>
    <string name="phone">Teléfono: 123456789</string>
    <string name="about">Info</string>
    <string name="infoText">JateList es una aplicación creada para poder guardar tus restaurantes favoritos o incluso los que no lo son tanto. Te permite guardar un registro de los restaurantes que has estado con su informacion y tu valoracion. Así te será mas facil elegir y disfrutarás de tu comida como nunca! :)</string>
    <string name="settings">Configuración</string>
    <string name="language">Idioma</string>
    <string name="euskera">Euskera</string>
    <string name="español">Castellano</string>
    <string name="ingles">Inglés</string>
    <string name="modeText">Modo</string>
    <string name="permisos">Permisos</string>
    <string name="marcar">Marcar tlf</string>
    <string name="takePhoto" translatable="false">Sacar foto</string>
    <string name="selectPhoto">Seleccionar desde galeria</string>
    <string name="fotomssg">Cargar imagen</string>
    <string name="msg_subscribed">Te has suscrito a novedades</string>
    <string name="msg_subscribe_failed">Error suscripcion</string>
    <string name="msg_unsubscribed">Desubscrito de novedades</string>
    <string name="msg_unsubscribe_failed">Desubscripcion fallida</string>

</resources>