<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EditActivity">

    <EditText
        android:id="@+id/izena"
        android:layout_width="315dp"
        android:layout_height="53dp"
        android:layout_marginTop="28dp"
        android:layout_marginBottom="18dp"
        android:hint="@string/izena"
        app:layout_constraintBottom_toTopOf="@+id/rating"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.114"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editButton" />



    <com.google.android.gms.maps.MapView
        android:id="@+id/mapview"
        android:layout_width="414dp"
        android:layout_height="250dp"
        android:layout_marginTop="8dp"
        android:contentDescription="@string/app_name"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.666"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ubi" />

    <EditText
        android:id="@+id/comments"
        android:layout_width="match_parent"
        android:layout_height="111dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="3dp"
        android:ems="10"
        android:gravity="start|top"
        android:hint="@string/comments"
        android:inputType="textMultiLine"
        app:layout_constraintBottom_toTopOf="@+id/mapview"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/phoneNumber" />

    <EditText
        android:id="@+id/ubi"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginBottom="1dp"
        android:hint="@string/ubicacion"
        app:layout_constraintBottom_toTopOf="@+id/mapview"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/comments" />

    <ImageButton
        android:id="@+id/backButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="28dp"
        android:contentDescription="@string/backButton"
        app:layout_constraintBottom_toTopOf="@+id/izena"
        app:layout_constraintEnd_toStartOf="@+id/saveButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@android:drawable/ic_menu_revert" />

    <ImageButton
        android:id="@+id/editButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="17dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="28dp"
        android:layout_marginBottom="28dp"
        android:contentDescription="@string/editButton"
        app:layout_constraintBottom_toTopOf="@+id/izena"
        app:layout_constraintEnd_toStartOf="@+id/removeButton"
        app:layout_constraintStart_toEndOf="@+id/saveButton"

        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@android:drawable/ic_menu_edit" />

    <ImageButton
        android:id="@+id/saveButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="18dp"
        android:layout_marginBottom="28dp"
        android:contentDescription="@string/saveButton"
        app:layout_constraintBottom_toTopOf="@+id/izena"
        app:layout_constraintEnd_toStartOf="@+id/editButton"
        app:layout_constraintStart_toEndOf="@+id/backButton"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@android:drawable/ic_menu_save" />

    <ImageButton
        android:id="@+id/removeButton"
        android:layout_width="69dp"
        android:layout_height="79dp"
        android:layout_marginStart="35dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="10dp"
        android:contentDescription="@string/saveButton"

        app:layout_constraintBottom_toTopOf="@+id/callButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/editButton"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@mipmap/erase" />

    <ImageButton
        android:id="@+id/callButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="17dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="13dp"
        android:layout_marginBottom="159dp"
        app:layout_constraintBottom_toTopOf="@+id/comments"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/izena"
        app:layout_constraintTop_toBottomOf="@+id/removeButton"
        app:srcCompat="@android:drawable/ic_menu_call" />

    <RatingBar
        android:id="@+id/rating"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="11dp"
        android:layout_marginTop="18dp"
        android:layout_marginEnd="151dp"
        android:layout_marginBottom="9dp"
        android:isIndicator="true"
        android:numStars="5"
        android:stepSize="1"
        app:layout_constraintBottom_toTopOf="@+id/phoneNumber"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/izena" />

    <EditText
        android:id="@+id/phoneNumber"
        android:layout_width="219dp"
        android:layout_height="40dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="9dp"
        android:layout_marginEnd="186dp"
        android:layout_marginBottom="7dp"
        android:ems="10"
        android:hint="@string/phone"
        android:inputType="phone"
        app:layout_constraintBottom_toTopOf="@+id/comments"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.6"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rating" />

</androidx.constraintlayout.widget.ConstraintLayout>