<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="230dp"
        android:layout_height="258dp"
        android:layout_marginStart="81dp"
        android:layout_marginTop="107dp"
        android:layout_marginEnd="100dp"
        android:layout_marginBottom="366dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/modeT"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/modeText" />

        <Switch
            android:id="@+id/modo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="48dp"
            android:text="@string/mode" />

        <RadioGroup
            android:id="@+id/radioGroup"
            android:layout_width="match_parent"
            android:layout_height="196dp">

            <TextView
                android:id="@+id/languageT"
                android:layout_width="match_parent"
                android:layout_height="31dp"
                android:text="@string/language" />

            <RadioButton
                android:id="@+id/eu"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Euskera" />

            <RadioButton
                android:id="@+id/en"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Ingles" />

            <RadioButton
                android:id="@+id/es"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Castellano" />
        </RadioGroup>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>